--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.thymeleaf.suffix=.html
 spring.thymeleaf.enabled=true
 spring.mvc.view.prefix=/templates/
 spring.mvc.view.suffix=.html
+
+spring.main.web-application-type=servlet
