--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,4 @@ spring.mvc.view.suffix=.html
 
 spring.main.web-application-type=servlet
 server.port=8080
+server.servlet.context-path=/password-generator
